--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name doran src/index.js styles/index.scss",
+    "build": "vue-cli-service build --target lib --name doran src/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
