--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "popper.js": "^1.16.0",
+    "v-click-outside-x": "^4.0.19",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
