--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "popper.js": "^1.16.0",
+    "throttle-debounce": "^2.1.0",
     "v-click-outside-x": "^4.0.19",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -22,6 +23,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
