--- a/package.json
+++ b/package.json
@@ -1,15 +1,41 @@
 {
-  "name": "doran-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "doran",
+  "version": "0.1.1",
+  "title": "Doran",
+  "author": "ximoThorn ximoThorn@163.com",
+  "description": "A UI components Library with Vue.js",
+  "homepage": "http://39.105.180.129:9000/",
+  "main": "dist/doran.umd.min",
+  "keywords": [
+    "doran",
+    "doran-ui",
+    "vue",
+    "vue.js",
+    "component",
+    "components",
+    "ui"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ximoThorn/Doran"
+  },
+  "files": [
+    "dist"
+  ],
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lib:build": "vue-cli-service build --target lib --name doran src/index.js",
-    "lint": "vue-cli-service lint"
+    "build:lib": "vue-cli-service build --target lib --name doran src/index.js",
+    "build:com": "webpack --config webpack.config.js",
+    "lint": "vue-cli-service lint",
+    "release": "standard-version",
+    "build:pro": "npm run build:lib && npm run build:com",
+    "publish": "npm run build:pro && npm run release && npm publish --access public"
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "glob": "^7.1.6",
     "popper.js": "^1.16.0",
     "throttle-debounce": "^2.1.0",
     "v-click-outside-x": "^4.0.19",
@@ -21,13 +47,20 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-loader": "^6.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^3.3.12"
   }
 }
