--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doran",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "title": "Doran",
   "author": "ximoThorn ximoThorn@163.com",
   "description": "A UI components Library with Vue.js",
@@ -31,7 +31,7 @@
     "lint": "vue-cli-service lint",
     "release": "standard-version",
     "build:pro": "npm run build:lib && npm run build:com",
-    "publish": "npm run build:pro && npm run release && npm publish --access public"
+    "pub": "npm run build:pro && npm run release && npm publish --access public"
   },
   "dependencies": {
     "core-js": "^3.3.2",
